# 2024-P1-bardicbyte

./: README.md  pyproject.toml
todo/views/: routes.py
