[tool.poetry]
name = "2024-p1-bardicbyte"
version = "0.1.0"
description = ""
authors = ["Alvee Mir <93854226+bardicbyte@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
